--- a/ato.yaml
+++ b/ato.yaml
@@ -36,3 +36,7 @@ dependencies:
   version_spec: '@3719ec970da96df05b6763671993ca2276df968b'
   link_broken: true
   path: elec/src/xt-connectors
+- name: esp32-s3
+  version_spec: '@775b03e7566001d5724b98a5c5d952a887bb550c'
+  link_broken: true
+  path: elec/src/esp32-s3
