--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "python.defaultInterpreterPath": "/Users/narayanpowderly/Documents/atopile-workspace/.venv/bin/python3"
+    "python.defaultInterpreterPath": "/Users/narayanpowderly/Documents/atopile-workspace/.venv/bin/python3",
+    "files.associations": {
+        ".ino": ".cpp",
+        "array": "cpp",
+        "string": "cpp",
+        "string_view": "cpp"
+    }
 }
