--- a/platformio.ini
+++ b/platformio.ini
@@ -13,18 +13,15 @@ include_dir = firmware/include
 lib_dir = firmware/lib
 src_dir = firmware/src
 test_dir = firmware/test
+boards_dir = firmware/boards
 
 [env:ESP32]
 platform = espressif32
-framework = arduino
 board = esp32-s3-devkitc-1
-build_flags = -DBOARD_HAS_PSRAM
-board_build.arduino.memory_type = qio_opi
-board_build.partitions = default_16MB.csv
-board_upload.flash_size = 16MB
+framework = arduino
+monitor_speed = 115200
 lib_deps = 
-	adafruit/Adafruit MCP4725@^2.0.2
 	adafruit/Adafruit ADS1X15@^2.5.0
 	emanuelefeola/TCA6408@^0.0.7
-	fastled/FastLED@^3.7.0
-	robtillaart/TCA9548@^0.3.0
+	adafruit/Adafruit MCP4725@^2.0.2
+	fastled/FastLED@^3.4.0
